feat: Add SEO meta tags and routing to index.html
Enhance search engine visibility and user experience by adding a meta description to index.html. Implement a catch-all rewrite in vercel.json to serve index.html for all routes, ensuring SPA behavior. Remove unused offline.html, landing.html, and manifest.json files.

--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,8 @@
   "framework": null,
   "buildCommand": "",
   "outputDirectory": ".",
-  "cleanUrls": true
+  "cleanUrls": true,
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
